--- a/Qwen_html_20251111_me6noycif.html
+++ b/Qwen_html_20251111_me6noycif.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Pengacara Perceraian Terpercaya di Purwokerto</title>
+  <title>Pengacara Perceraian Terpercaya di Banjarnegara</title>
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet"/>
 </head>
@@ -19,8 +19,8 @@
   <!-- Hero Section -->
   <section class="hero">
     <div class="container">
-      <h2>Pengacara <span style="color: #e63946;">Perceraian</span> Terpercaya di Purwokerto</h2>
-      <h3>Kantor Hukum ARH & Partners</h3>
+      <h2>Pengacara <span style="color: #e63946;">Perceraian</span> Terpercaya di Banjarnegara</h2>
+      <h3>Kantor SAMYO & Partners</h3>
     </div>
   </section>
 
@@ -52,7 +52,7 @@
   <section class="about">
     <div class="container">
       <h4>Tentang Kami</h4>
-      <p>Kantor hukum ARH and PARTNERS merupakan kantor hukum yang dibentuk oleh para advokat yang telah eksis dan mempunyai banyak pengalaman dalam menangani permasalahan-permasalahan hukum.</p>
+      <p>Kantor hukum SAMYO and PARTNERS merupakan kantor hukum yang dibentuk oleh para advokat yang telah eksis dan mempunyai banyak pengalaman dalam menangani permasalahan-permasalahan hukum.</p>
     </div>
   </section>
 
@@ -83,16 +83,16 @@
       <h4>Profil Pengacara Kami</h4>
       <div class="lawyer-grid">
         <div class="lawyer-item">
-          <h5>Achmad Reza Haryana, S.H., M.H.</h5>
-          <p>Pengacara dari organisasi advokat Peradi, berpengalaman dalam menangani perkara-perkara terkait dengan sengketa waris, hukum keluarga dan perkawinan.</p>
+          <h5>Samyo, S.H.</h5>
+          <p>Pengacara dari organisasi advokat DPN Indonesia, berpengalaman dalam menangani perkara-perkara terkait dengan sengketa waris, hukum keluarga dan perkawinan.</p>
         </div>
         <div class="lawyer-item">
-          <h5>Monisti Sri Widianto, S.H.</h5>
+          <h5>Herman Rohmat, S.H.</h5>
           <p>Merupakan Pengacara aktif yang menangani dalam bidang non litigasi, melakukan pendampingan terhadap klien terkait perkara penganiayaan, penggelapan, pencemaran nama baik, Kekerasan Dalam Rumah Tangga (KDRT), perceraian, sengketa tanah dan sebagainya.</p>
         </div>
         <div class="lawyer-item">
-          <h5>Khaerunnisa Tsabita Enggar Wardhani, S.H</h5>
-          <p>S1 Fakultas Hukum Universitas Jenderal Soedirman, GPA 3.71. Konsentrasi Hukum Perdata. Menangani perkara perdata seperti dalam lingkup keluarga dan perkawinan serta sengketa waris. Melakukan pendampingan terhadap klien dengan berbagai latar permasalahan.</p>
+          <h5>Triantoro, S.H</h5>
+          <p>S1 Fakultas Hukum Universitas Jenderal Soedirman Konsentrasi Hukum Perdata. Menangani perkara perdata seperti dalam lingkup keluarga dan perkawinan serta sengketa waris. Melakukan pendampingan terhadap klien dengan berbagai latar permasalahan.</p>
         </div>
       </div>
     </div>
@@ -105,15 +105,15 @@
       <p>Pandangan jujur tentang cara kami bekerja</p>
       <div class="testimonial-grid">
         <div class="testimonial-item">
-          <h5>Atika</h5>
+          <h5>Anisa</h5>
           <p>Sangat memuaskan dalam proses penyelesaian hukum dan juga transparan.</p>
         </div>
         <div class="testimonial-item">
-          <h5>Devina</h5>
+          <h5>rizal</h5>
           <p>Respon cepat dan biaya murah.</p>
         </div>
         <div class="testimonial-item">
-          <h5>Efendy</h5>
+          <h5>Dafa</h5>
           <p>Sidang cepat hanya 2 kali saja serta penjelasan solusi hukum mudah di pahami.</p>
         </div>
       </div>
@@ -132,7 +132,7 @@
   <!-- Footer -->
   <footer class="footer">
     <div class="container">
-      <p>Copyright © 2024. pengacarapurwokerto.id. All rights reserved.</p>
+      <p>Copyright © 2024. pengacaraceraibanjarnegara. All rights reserved.</p>
     </div>
   </footer>
 
